[package]
name = "nginx_log_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*",features=["full","net"]}
clap = {version = "*", features = ["derive"] }
prometheus = "*"
log = "*"
simple_logger = "*"
serde = { version = "*", features = [ "derive" ] }
serde_json = "*"
axum = "*"
lazy_static = "*"
chrono = "*"
xdb = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }